--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,103 +8,107 @@
     <link rel="stylesheet" href="/frontend/animation.css"> -->
   <title>Cosmic Arcade - Home</title>
   <style>
-/* Set background color for the body */
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    background-color: #1d1b34; /* Match the background color from the repository page */
-    color: #fff;
-}
+    /* Set background color for the body */
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background-color: #1d1b34;
+      /* Match the background color from the repository page */
+      color: #fff;
+    }
 
-header {
-    background-color: #1d1b34; /* Match the background color from the repository page */
-    color: #fff;
-    padding: 10px;
-}
+    header {
+      background-color: #1d1b34;
+      /* Match the background color from the repository page */
+      color: #fff;
+      padding: 10px;
+    }
 
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
+    nav ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
 
-nav li {
-    display: inline;
-    margin-right: 20px;
-}
+    nav li {
+      display: inline;
+      margin-right: 20px;
+    }
 
-nav a {
-    text-decoration: none;
-    color: #fff;
-}
+    nav a {
+      text-decoration: none;
+      color: #fff;
+    }
 
-#hero {
-    background-image: url('space_bg.jpg');
-    background-size: cover;
-    height: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+    #hero {
+      background-image: url('space_bg.jpg');
+      background-size: cover;
+      height: 400px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
-#hero h1 {
-    font-size: 3em;
-    margin-bottom: 10px;
-}
+    #hero h1 {
+      font-size: 3em;
+      margin-bottom: 10px;
+    }
 
-.cta-button {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #07a607; /* Match the button color from the repository page */
-    color: #fff;
-    text-decoration: none;
-    border-radius: 4px;
-    font-weight: bold;
-}
+    .cta-button {
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: #07a607;
+      /* Match the button color from the repository page */
+      color: #fff;
+      text-decoration: none;
+      border-radius: 4px;
+      font-weight: bold;
+    }
 
-#featured-games {
-    text-align: center;
-    padding: 40px 0;
-}
+    #featured-games {
+      text-align: center;
+      padding: 40px 0;
+    }
 
-.game-card {
-    display: inline-block;
-    width: 200px;
-    padding: 20px;
-    margin: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
+    .game-card {
+      display: inline-block;
+      width: 200px;
+      padding: 20px;
+      margin: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
 
-.game-card img {
-    width: 100%;
-    max-height: 100%;
-    object-fit: cover;
-    border-radius: 4px;
-}
+    .game-card img {
+      width: 100%;
+      max-height: 100%;
+      object-fit: cover;
+      border-radius: 4px;
+    }
 
-#cosmic-challenges {
-    text-align: center;
-    padding: 40px 0;
-    background-color: #f0f0f0;
-    color: #333; /* Match the text color from the repository page */
-}
+    #cosmic-challenges {
+      text-align: center;
+      padding: 40px 0;
+      background-color: #f0f0f0;
+      color: #333;
+      /* Match the text color from the repository page */
+    }
 
-#join-community {
-    text-align: center;
-    padding: 40px 0;
-    background-color: #ff9900;
-    color: #fff;
-}
+    #join-community {
+      text-align: center;
+      padding: 40px 0;
+      background-color: #ff9900;
+      color: #fff;
+    }
 
-footer {
-    text-align: center;
-    padding: 10px;
-    background-color: #1d1b34; /* Match the background color from the repository page */
-    color: #fff;
-}
-
+    footer {
+      text-align: center;
+      padding: 10px;
+      background-color: #1d1b34;
+      /* Match the background color from the repository page */
+      color: #fff;
+    }
   </style>
 </head>
 
@@ -112,7 +116,7 @@ footer {
   <header>
     <nav>
       <ul>
-        <li><a href="/"><img src="/assets/favicon/favicon-32x32.png"></a></li>
+        <!-- <a href="/"><img src="/assets/logo2.jpg"></a> -->
         <!-- <li><a href="#home">Home</a></li> -->
         <li><a href="#games">Games</a></li>
         <li><a href="#high-scores">High Scores</a></li>
