demo frontend fix

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -48,6 +48,7 @@ body {
 
 /* Style the buttons */
 button {
+  width: 100%;
     padding: 10px 20px;
     margin-right: 10px;
     border: none;
@@ -95,7 +96,7 @@ button {
         margin-top: 10%;
     }
     #loginform {
-        max-width: 100%;
+        max-width: 80%;
     }
     #username, #password {
         width: 100%;
