--- a/frontend/sign-up.html
+++ b/frontend/sign-up.html
@@ -36,6 +36,7 @@ body {
     max-width: 350px;
     margin: 0 auto;
     padding: 2%;
+    margin-top: 10px;
     background-color: #fff;
     border-radius: 18px;
     box-shadow: 0 0 10px rgba(0, 221, 255, 1.8);
@@ -99,7 +100,7 @@ button {
         margin-top: 10%;
     }
     #loginform {
-        max-width: 90%; /* Adjust the max-width for smaller screens */
+        max-width: 80%; /* Adjust the max-width for smaller screens */
     }
     .new-user {
         width: 80%; /* Adjust the width for smaller screens */
