update profile and chat
edit profile and challenge

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link rel="stylesheet" href="/frontend/global.css">
     <link rel="stylesheet" href="/frontend/animation.css"> -->
-  <title>Cosmic Arcade - Home</title>
+  <title>BitBliss</title>
   <style>
     /* Set background color for the body */
     body {
