--- a/frontend/login.html
+++ b/frontend/login.html
@@ -157,7 +157,7 @@
     const clientpassword = input_password.value;
 
     if (login_id === "" || clientpassword === "") {
-      alert("Please enter both username and password");
+      alert("Please enter both username and password.");
     } else {
       fetch("/login", {
         method: "POST",
@@ -178,7 +178,7 @@
         })
         .then((data) => {
           if (data.status === "success") {
-            localStorage.setItem("username", login_id);
+            localStorage.setItem("username", data.user.username);
             window.location.href = "/";
           } else {
             alert(data.message);
@@ -190,6 +190,7 @@
         });
     }
   }
+
 
 
 
