--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,168 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="/frontend/global.css">
-    <link rel="stylesheet" href="/frontend/animation.css"> -->
   <title>BitBliss</title>
-  <style>
-    /* Set background color for the body */
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background-color: #1d1b34;
-      /* Match the background color from the repository page */
-      color: #fff;
-    }
-
-    header {
-      background-color: #1d1b34;
-      /* Match the background color from the repository page */
-      color: #fff;
-      padding: 10px;
-    }
-
-    nav ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav li {
-      display: inline;
-      margin-right: 20px;
-    }
-
-    nav a {
-      text-decoration: none;
-      color: #fff;
-    }
-
-    #hero {
-      background-image: url('space_bg.jpg');
-      background-size: cover;
-      height: 400px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    #hero h1 {
-      font-size: 3em;
-      margin-bottom: 10px;
-    }
-
-    .cta-button {
-      display: inline-block;
-      padding: 10px 20px;
-      background-color: #07a607;
-      /* Match the button color from the repository page */
-      color: #fff;
-      text-decoration: none;
-      border-radius: 4px;
-      font-weight: bold;
-    }
-
-    #featured-games {
-      text-align: center;
-      padding: 40px 0;
-    }
-
-    .game-card {
-      display: inline-block;
-      width: 200px;
-      padding: 20px;
-      margin: 10px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-
-    .game-card img {
-      width: 100%;
-      max-height: 100%;
-      object-fit: cover;
-      border-radius: 4px;
-    }
-
-    #cosmic-challenges {
-      text-align: center;
-      padding: 40px 0;
-      background-color: #f0f0f0;
-      color: #333;
-      /* Match the text color from the repository page */
-    }
-
-    #join-community {
-      text-align: center;
-      padding: 40px 0;
-      background-color: #ff9900;
-      color: #fff;
-    }
-
-    footer {
-      text-align: center;
-      padding: 10px;
-      background-color: #1d1b34;
-      /* Match the background color from the repository page */
-      color: #fff;
-    }
-  </style>
 </head>
 
 <body>
-  <header>
-    <nav>
-      <ul>
-        <!-- <a href="/"><img src="/assets/logo2.jpg"></a> -->
-        <!-- <li><a href="#home">Home</a></li> -->
-        <li><a href="#games">Games</a></li>
-        <li><a href="#high-scores">High Scores</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <section id="hero">
-    <div class="content">
-      <h1>Cosmic Arcade</h1>
-      <p>Explore the Cosmic Adventures!</p>
-      <a href="/sign-up" class="cta-button">Start Your Cosmic Adventure Now!</a>
-    </div>
-  </section>
-
-  <section id="featured-games">
-    <h2>Featured Games</h2>
-    <div class="game-card">
-      <img src="../assets/cosmicshootwlp.png" alt="Game 1">
-      <h3>Cosmic shoot</h3>
-      <a href="/sign-up" class="cta-button">Play Now</a>
-    </div>
-    <div class="game-card">
-      <img src="../assets/tictactoewlp.png" alt="Game 2">
-      <h3>tic tac toe</h3>
-      <a href="/sign-up" class="cta-button">Play Now</a>
-    </div>
-
-  </section>
-
-  <section id="cosmic-challenges">
-    <h2>Cosmic Challenges</h2>
-    <p>Take on exciting challenges in the cosmos and earn cosmic rewards!</p>
-  </section>
-
-  <section id="join-community">
-    <h2>Join Our Community</h2>
-    <p>Sign up to stay updated on the latest games, events, and promotions.</p>
-    <a href="/sign-up" class="cta-button">Join Now</a>
-  </section>
-
-  <footer>
-    <p>&copy; 2023 Cosmic Arcade. All rights reserved.</p>
-  </footer>
-  <script>
-
-  </script>
+  <a href="/sign-up">sign-up</a><br/>
+  <a href="/login">login</a>
 </body>
 
 </html>
