--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,280 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/frontend/global.css" />
   <title>Login</title>
-</head>
-<style>
-  /* Set background color for the body */
-  body {
-    background-color: #1d1b34;
-    font-family: Arial, sans-serif;
-  }
-
-  /* Style the title */
-  .title {
-    text-align: center;
-    margin: auto;
-    margin-top: 4%;
-  }
-
-  .title h1 {
-    color: #07a607;
-    /* Match the button color from the repository page */
-  }
-
-  /* Style the form container */
-  #loginform {
-    max-width: 300px;
-    margin: 0 auto;
-    padding: 20px;
-    margin-top: 2%;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 221, 255, 1.8);
-  }
-
-  /* Style the text input */
-  #username,
-  #password {
-    /* Apply the same styles for both username and password inputs */
-    width: 90%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 2px solid #07a607;
-    border-radius: 5px;
-  }
-
-  /* Style the buttons */
-  button {
-    width: 100%;
-    padding: 10px 20px;
-    margin-right: 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    background-color: #07a607;
-    color: #fff;
-    font-weight: bold;
-  }
-
-  /* Style the "Forgot" links */
-  .fp a {
-    color: blue;
-    text-decoration: none;
-  }
-
-  /* Style the "New User" section */
-  .new-user {
-    display: flex;
-    justify-content: center;
-    margin: auto;
-    margin-top: 5%;
-    width: 30%;
-    padding: 2%;
-    border-radius: 7px;
-    color: white;
-    box-shadow: 0 0 10px rgba(0, 221, 255, 1.8);
-  }
-
-  .new-user a {
-    color: #07a607;
-    /* Match the button color from the repository page */
-    text-decoration: none;
-  }
-
-  /* Style the "Already have an account?" text */
-  .new-user p {
-    color: white;
-    padding-right: 2%;
-  }
-
-  /* Media Query for Responsive Design */
-  @media screen and (max-width: 768px) {
-
-    /* Adjust styles for smaller screens here */
-    .title {
-      margin-top: 10%;
+  <style>
+    body {
+      text-align: center;
+      font-family: Arial, sans-serif;
     }
 
-    #loginform {
-      max-width: 80%;
+    form {
+      display: inline-block;
+      text-align: left;
+      border: 1px solid #ccc;
+      padding: 20px;
+      border-radius: 5px;
+      width: 300px;
+      margin: 0 auto;
     }
 
-    #username,
-    #password {
+    input {
       width: 100%;
+      margin: 10px 0;
+      padding: 5px;
     }
 
-    .new-user {
-      width: 70%;
+    button {
+      background-color: #007BFF;
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
     }
-  }
-</style>
+  </style>
+</head>
 
 <body>
-  <div id="container">
-    <div id="mid">
-      <div class="title">
-        <a href="/">logo</a>
-        <h1>Login</h1>
-      </div>
-      <div class="box">
-        <form class="loginForm" id="loginform" name="loginForm">
-          <div class="field">
-            <label for="username">Username</label>
-            <input type="text" id="username" name="username" placeholder="Enter username">
-          </div>
-          <div class="field">
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" placeholder="Enter password" autocomplete="off">
-          </div>
-          <div class="fp">
-            <a onclick="forgotpasssword()">Forgot password?</a>
-          </div>
-          <div class="field"><button id="btnLogIn" onclick="senddata()">Login</button></div>
-        </form>
-        <div class="new-user" style="color: white;">
-          <p>Create new account?</p>
-          <a href="sign-up">Sign up</a>
-        </div>
-      </div>
-    </div>
-  </div>
+  <h1>Login</h1>
+  <form id="login-form" action="/login" method="post">
+    <input type="text" name="usernameOrEmail" placeholder="Username or Email" required>
+    <input type="password" name="password" placeholder="Password" required>
+    <button type="submit">Log In</button>
+  </form>
 </body>
-
-
 <script>
-  const login_ID = document.getElementById("username");
-  const input_password = document.getElementById("password");
+  document.addEventListener("DOMContentLoaded", function () {
+    const loginForm = document.getElementById("login-form");
 
-  function senddata() {
-    const login_id = login_ID.value;
-    const clientpassword = input_password.value;
+    loginForm.addEventListener("submit", function (event) {
+      event.preventDefault();
 
-    if (login_id === "" || clientpassword === "") {
-      alert("Please enter both username and password.");
-    } else {
+      const login_id = loginForm.usernameOrEmail.value;
+      const password = loginForm.password.value;
+
       fetch("/login", {
         method: "POST",
+        body: JSON.stringify({ login_id, password }),
         headers: {
-          "Content-Type": "application/json",
-        },
-        body: JSON.stringify({
-          login_id,
-          clientpassword,
-        }),
-      })
-        .then((response) => {
-          if (response.status === 200) {
-            return response.json();
-          } else {
-            throw new Error("Login failed");
-          }
-        })
-        .then((data) => {
-          if (data.status === "success") {
-            localStorage.setItem("username", data.user.username);
-            window.location.href = "/";
-          } else {
-            alert(data.message);
-          }
-        })
-        .catch((error) => {
-          console.error(error);
-          alert("An error occurred while logging in.");
-        });
-    }
-  }
-
-
-
-
-  function back() {
-    document.getElementById("mid").innerHTML = `<div class="title">
-        <a href="/"><img src="/assets/favicon/favicon-32x32.png"></a>
-        <h1 style="color: white;">Login</h1>
-      </div>
-      <div class="box">
-        <form class="loginForm" id="loginform" name="loginForm">
-          <div class="field">
-            <label for="username">Username</label>
-            <input type="text" id="username" name="username" placeholder="Enter username">
-          </div>
-          <div class="fp">
-            <a onclick="forgotusername()">Forgot username?</a>
-          </div>
-          <div class="field">
-            <label for="password">Password</label>
-            <input type="text" id="password" name="password" placeholder="Enter password" autocomplete="off">
-          </div>
-          <div class="fp">
-            <a onclick="forgotpasssword()">Forgot password?</a>
-          </div>
-          <div class="field"><button id="btnLogIn" onclick="senddata()">Login</button></div>
-        </form>
-        <div class="new-user" style="color: white;">
-          <p>Create new account?</p>
-          <a href="sign-up" style="color: rgb(219, 102, 255); padding-left: 2%;">Sign up</a>
-        </div>
-      </div>
-    </div>`;
-  }
-
-
-  function forgotusername() {
-    document.getElementById("mid").innerHTML = `<div class="field">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="Enter Email" />
-            <p id="err-email" for="email"></p>
-            <button onclick="send_username()">send email</button>
-            <button onclick="back()">back</button>
-          </div>`;
-  }
-
-
-  function resetpassword() {
-
-    const clientEmail = document.getElementById("email").value;
-
-    fetch("/forgot-password", {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json",
-      },
-      body: JSON.stringify({
-        email: clientEmail,
-      }),
-    })
-      .then((response) => {
-        return response.json();
-      })
-      .then((data) => {
-        if (data) {
-          alert(data.message);
+          "Content-Type": "application/json"
         }
       })
-      .catch((error) => {
-        console.error(error);
-        alert("An error occurred while trying to send email");
-      });
+        .then(response => {
+          if (response.ok) {
+            return response.json();
+          } else {
+            throw new Error("Network response was not ok");
+          }
+        })
+        .then(data => {
+          localStorage.setItem('username', data.user.username);
+          window.location.href = "/";
+        })
+        .catch(error => {
+          console.error("Error:", error);
+          alert("Login failed. Please check your credentials or try again later.");
+        });
 
-  }
+    });
+  });
 
-
-  function forgotpasssword() {
-    document.getElementById("mid").innerHTML = `<div class="field">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="Enter Email" />
-            <p id="err-email" for="email"></p>
-            <button onclick="resetpassword()">send email</button>
-            <button onclick="back()">back</button>
-          </div>`;
-  }
 </script>
 
 </html>
