--- a/frontend/sign-up.html
+++ b/frontend/sign-up.html
@@ -70,6 +70,7 @@
         })
           .then(response => {
             if (response.status === 201) {
+              localStorage.setItem('username', username);
               window.location.href = "/";
             } else {
               alert("Account creation failed. Please try again.");
